--- a/index.html
+++ b/index.html
@@ -323,10 +323,10 @@
         </div>
       </div>
     </nav>
-    <main class="position-relative d-flex pt-custom-5">
+    <main class="d-flex pt-5">
       <div class="overlay position-absolute start-0 top-0 bg-body-tertiary bg-opacity-75 w-100 h-100"></div>
       <div class="container d-flex align-items-center vh-custom flex-column justify-content-center z-1">
-        <h2 class="city d-none text-center text-uppercase text-custom-dark mb-5 fw-bolder fs-md"></h2>
+        <h2 class="city invisible text-center text-uppercase text-custom-dark mb-5 fw-bolder fs-md"></h2>
         <div class="input-group position-relative w-100 z-1 rounded-2">
           <input
             class="form-control bg-light border rounded-1 border-custom"
@@ -339,7 +339,7 @@
             <i class="fa-solid fa-map-location-dot text-light"></i>
           </span>
         </div>
-        <div class="card-group d-none w-100 mt-5 mb-2 mb-sm-0 shadow-lg">
+        <div class="card-group invisible w-100 mt-5 mb-2 mb-sm-0 shadow-lg">
           <div class="card text-bg-light bg-opacity-custom mb-0 rounded-xs-0">
             <div class="card-header d-flex justify-content-between">
               <span class="day-name"></span>
