--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="js/all.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
   </head>
-  <body class="vh-100">
+  <body class="min-vh-100">
     <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
       <div class="container d-flex justify-content-start">
         <div class="logo">
