--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
     <main class="d-flex pt-5">
       <div class="overlay position-fixed start-0 top-0 bg-body-tertiary bg-opacity-75 w-100 h-100"></div>
       <div class="container d-flex align-items-center vh-custom flex-column justify-content-center z-1">
-        <h2 class="city w-100 invisible text-center text-uppercase text-custom-dark mb-5 fw-bolder fs-md"></h2>
+        <h2 class="city w-100 invisible text-center text-uppercase text-custom-dark mb-5 px-2 fw-bolder fs-md"></h2>
         <div class="input-group position-relative w-100 z-1 rounded-2">
           <input
             class="form-control bg-light border rounded-1 border-custom"
